# RadiationEffects_proj2

./: 0_notes_radEff2.txt  README.md  RadEffs2_analysis.m  module2_2d_electrostatics_defect_space_charge.aux  module2_2d_electrostatics_defect_space_charge.fdb_latexmk  module2_2d_electrostatics_defect_space_charge.fls  project_plan.aux  project_plan.fdb_latexmk  project_plan.fls  project_plan.out  project_plan.tex  project_plan.toc
docs/: README.txt
docs/implementation_notes/: README.txt  module11_physical_dependency_graph_implementation_note.md  module2_fem_implementation_note.md  module3_fem_implementation_note.md  module4_fem_implementation_note.md  module5_fem_implementation_note.md  module6_fem_implementation_note.md
docs/physics_notes/: Module2_CPINN.tex  NSA_SSP_Intrv_Notes.txt  module10_bcs_gl_tdgl_superconductivity_theory.tex  (+87 more)
geant4/: README.md  README_geant4.txt
geant4/module1_silicon_edep/: CMakeLists.txt  README.md
geant4/module1_silicon_edep/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
geant4/module1_silicon_edep/macros/: init_vis.mac  run_batch.mac  vis_run.mac
geant4/module1_silicon_edep/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  module1_silicon_edep.cc
geant4/module1_transmon_edep/: CMakeLists.txt  README.md
geant4/module1_transmon_edep/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  GeometryComponent.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
geant4/module1_transmon_edep/macros/: geometry_check.mac  init_vis.mac  run_batch.mac  vis_run.mac
geant4/module1_transmon_edep/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  module1_transmon_edep.cc
matlab/: README_matlab.txt  main_module2_cpinn_electrostatics.m  main_module2_electrostatics.m  main_module2_pinn_electrostatics.m  main_module3_2d_defect_evolution.m  main_module3_defect_evolution.m  main_module3_fem_defect_evolution.m  main_module4_2d_ballistic_diffusive_thermal.m  main_module4_fem_ballistic_diffusive_thermal.m  main_module4_thermal.m  main_module4a_2d_continuum_thermal.m  main_module4b_phonon_aware_thermal.m  main_module5_drift_diffusion.m  main_module5_fem_drift_diffusion.m  main_module6_multiphysics.m  setup_project_paths.m
(+189 files in other folders)
